@@ -1,6 +1,14 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Updated my dists to latest
+  - Added Alien::Build::Plugin::Download::GitHub
+  - Added Alien::libuuid
+  - Added Alien::unzip
+  - Added Dist::Zilla::Plugin::Bootstrap::lib
+  - Added Dist::Zilla::Plugin::DynamicPrereqs
+  - Added Dist::Zilla::Plugin::Meta::Dynamic::Config
+  - Added Dist::Zilla::Plugin::PPPort
 
 2.10      2019-02-16 12:23:08 -0500
   - updated my dists to latest
